skeplib/tests/fixtures/sema_project/valid/folder_import_namespace/string/nested/trim.sk
fn trim(s: String) -> String { return s; }
export { trim };
