skeplib/tests/fixtures/sema_project/invalid/conflicting_wildcard/b.sk
fn x() -> Int { return 2; }
export { x };
